--- a/curriculo.html
+++ b/curriculo.html
@@ -19,20 +19,21 @@
     </center>
 </header>
 
-<body style=" background-color: #DAB99F;">
+<body style=" background-color: #dabca6d2">
     <center>
         <img src="./imgs/pp2.jpeg" alt="Paula Victória" title="Paula Victória" height="200px"
             style="border-radius: 50%;"><br></img>
     </center>
     <br>
-    <center><a href="identificacao.html" target="main">Identificação ┃  </a>
-        <a href="formacao.html" target="main">Formação ┃  </a>
+    <center>
+        <a href="identificacao.html" target="main">Identificação ┃ </a>
+        <a href="formacao.html" target="main">Formação ┃ </a>
         <a href="experiencia.html" target="main">Experiência Profissional ┃ </a>
-        <a href="Formacao.html" target="main">Hobbies</i></a>
+        <a href="hobbies.html" target="main">Hobbies</i></a>
     </center>
     <br>
-    <center><iframe src="/imgs/blueimg.jpg" width="90%" height="500px" name="main"
-            style=" background-color: #C4A085;"></iframe></center>
+    <center><iframe class="big" src="" width="90%" height="500px" name="main" style=" background-color:#3a2d245d;">
+    </center></iframe>
     <center><a href="https://www.linkedin.com/in/paula-vict%C3%B3ria-584732197/" target="_blank"><img
                 src="imgs/lkicon2.png" alt="Linkedin de Paula" title="Linkedin de Paula" height="50px"></a>
         <a href="https://github.com/paulavictoria" target="_blank">
