--- a/formacao.html
+++ b/formacao.html
@@ -2,7 +2,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
 <link rel="stylesheet" href="style.css">
-
+<title>Formação Acadêmica</title>
 
 <p>
 <h1>Formação Acadêmica</h1>
