--- a/experiencia.html
+++ b/experiencia.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="style.css">
 
 
-<h1>Experiência Profissional</h1>
+<h1 class="titleExp">Experiência Profissional</h1>
 <table style="width: 80%;">
     <tr>
         <th>Período</th>
