--- a/formacao.html
+++ b/formacao.html
@@ -5,7 +5,7 @@
 <title>Formação Acadêmica</title>
 
 <p>
-<h1>Formação Acadêmica</h1>
+<h1 class="titleForm">Formação Acadêmica</h1>
 <ul style="list-style-type: square;">
     <li style="color: #332F2E"><a href="https://www.instagram.com/eteportodigital/" alt="ETEPD"
             target="_blank">Tecnólogo em Desenvolvimento de Sistemas com Ênfase em Novas Tecnologias</a></li>
