--- a/identificacao.html
+++ b/identificacao.html
@@ -9,8 +9,8 @@
     <link rel="shortcut icon" type="imagens/png" href="imgs/ppimg.png">
     <title>Paula Victória - Id.</title>
 </head>
-<h1>Identificação</h1>
-<p>
+<h1 class="titleId">Identificação</h1>
+<p class="idInformation">
     Sou Paula Victória, estudante de Análise e Desenvolvimento de Sistemas, atualmente no 2º período.
     Tenho experiência com desenvolvimento web, trabalhando com HTML, CSS e JavaScript. Estou sempre buscando
     aprender mais e aplicar meus conhecimentos para criar soluções inovadoras e resolver problemas na área
