--- a/curriculo.html
+++ b/curriculo.html
@@ -19,9 +19,9 @@
     </center>
 </header>
 
-<body style=" background-color: #dabca6d2">
+<body style=" background-color: #000000d2">
     <center>
-        <img src="./imgs/pp2.jpeg" alt="Paula Victória" title="Paula Victória" height="200px"
+        <img src="./imgs/pp2.jpeg" alt="Foto de Paula" title="Foto de Paula" height="200px"
             style="border-radius: 50%;"><br></img>
     </center>
     <br>
@@ -32,7 +32,7 @@
         <a href="hobbies.html" target="main">Hobbies</i></a>
     </center>
     <br>
-    <center><iframe class="big" src="" width="90%" height="500px" name="main" style=" background-color:#3a2d245d;">
+    <center><iframe class="big" src="" width="90%" height="500px" name="main" style=" background-color:#a166975d;">
     </center></iframe>
     <center><a href="https://www.linkedin.com/in/paula-vict%C3%B3ria-584732197/" target="_blank"><img
                 src="imgs/lkicon2.png" alt="Linkedin de Paula" title="Linkedin de Paula" height="50px"></a>
