--- a/curriculo.html
+++ b/curriculo.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
+    
 <!--alt+shift+f-->
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="curriculo.css">
     <link rel="shortcut icon" type="imagens/png" href="imgs/pvicon.png">
     <title>Paula Victória ┃ Developer</title>
 </head>
 
 <header>
     <center>
-        <h1>Paula Victória Gomes Pereira</h1>
-        <p>Analista e Desenvolvedora Full-Stack</p>
+        <h1 class="name">Paula Victória Gomes Pereira</h1>
+        <h3 class="function">Analista e Desenvolvedora Full-Stack</h3>
     </center>
 </header>
 
@@ -26,13 +26,13 @@
     </center>
     <br>
     <center>
-        <a href="identificacao.html" target="main">Identificação ┃ </a>
-        <a href="formacao.html" target="main">Formação ┃ </a>
-        <a href="experiencia.html" target="main">Experiência Profissional ┃ </a>
-        <a href="hobbies.html" target="main">Hobbies</i></a>
+        <a style="margin-right: 30px;" href="identificacao.html" target="main">Identificação </a>
+        <a style="margin-right:30px" href="formacao.html" target="main">Formação </a>
+        <a style="margin-right: 30px;"" href="experiencia.html" target="main">Experiência Profissional</a>
+        <a style="font-weight: bold;" href="hobbies.html" target="main">Hobbies</i></a>
     </center>
     <br>
-    <center><iframe class="big" src="" width="90%" height="500px" name="main" style=" background-color:#a166975d;">
+    <center><iframe class="big" src="" width="700px" height="400px" name="main" style=" background-color:#1f1f1fd2;">
     </center></iframe>
     <center><a href="https://www.linkedin.com/in/paula-vict%C3%B3ria-584732197/" target="_blank"><img
                 src="imgs/lkicon2.png" alt="Linkedin de Paula" title="Linkedin de Paula" height="50px"></a>
