--- a/experiencia.html
+++ b/experiencia.html
@@ -1,7 +1,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="experiencia.css">
 
 
 <h1 class="titleExp">Experiência Profissional</h1>
@@ -16,14 +16,15 @@
         <td>Estagiário no Marketing do Produto</td>
         <td>FlorArte</td>
     </tr>
-    <tr>
-        <td>2022 a 2024</td>
-        <td>Atendente/Balconista</td>
-        <td>Drogasil</td>
+
+    <td>2022 a 2024</td>
+    <td>Atendente 1 Balconista</td>
+    <td>Drogasil</td>
     </tr>
     <tr>
         <td>2022 a 2024</td>
-        <td>Atendente/Balconista</td>
+        <td>Atendente 2 Balconista</td>
         <td>Drogasil</td>
     </tr>
+    <tr>
 </table>
