--- a/identificacao.html
+++ b/identificacao.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="identificacao.css">
     <link rel="shortcut icon" type="imagens/png" href="imgs/ppimg.png">
     <title>Paula Victória - Id.</title>
 </head>
@@ -14,17 +14,17 @@
     Sou Paula Victória, estudante de Análise e Desenvolvimento de Sistemas, atualmente no 2º período.
     Tenho experiência com desenvolvimento web, trabalhando com HTML, CSS e JavaScript. Estou sempre buscando
     aprender mais e aplicar meus conhecimentos para criar soluções inovadoras e resolver problemas na área
-    de tecnologia. Eu sou uma fonte constante de aprendizado e evolução, sempre pronto para ajudar,
+    de tecnologia. Eu sou uma fonte constante de aprendizado e evolução, sempre pronta para ajudar,
     compartilhar conhecimento e fornecer apoio. Minha capacidade de compreender e responder a uma vasta gama
-    de perguntas me torna uma ferramenta valiosa para quem busca entender melhor o mundo ao seu redor. Além
-    disso, tenho a habilidade de me adaptar ao estilo e ritmo de cada conversa, criando uma interação mais
-    fluida e natural. Estou sempre aqui, disposto a ouvir, aprender com as interações e, claro, contribuir
-    para soluções criativas e construtivas!
+    de perguntas me torna uma ferramenta valiosa para quem busca entender melhor o mundo ao seu redor!</p>
     <br>
     <br>
-    <strong>Endereço:</strong> Recife-PE, Boa Viagem<br>
+<!--
+<p> <strong>Endereço:</strong> Recife-PE, Boa Viagem<br>
     <strong>E-mail:</strong> paula.analystsoft@gmail.com<br>
     <strong>Telefone:</strong> (81) 99106-6630
-    <br>
+</p>
+-->
+<br>
 
 </html>
