--- a/curriculo.html
+++ b/curriculo.html
@@ -28,7 +28,7 @@
     <center>
         <a style="margin-right: 30px;" href="identificacao.html" target="main">Identificação </a>
         <a style="margin-right:30px" href="formacao.html" target="main">Formação </a>
-        <a style="margin-right: 30px;"" href="experiencia.html" target="main">Experiência Profissional</a>
+        <a style="margin-right: 30px;" href="experiencia.html" target="main">Experiência Profissional</a>
         <a style="font-weight: bold;" href="hobbies.html" target="main">Hobbies</i></a>
     </center>
     <br>
