--- a/hobbies.html
+++ b/hobbies.html
@@ -7,7 +7,7 @@
 <table class="idHobbies" style="width: 70%;">
     <tr>
         <tr>
-            <th>Assistir Jogos de Futebol</th>
+            <th>Gosto de Esportes</th>
         </tr>
         <tr>
             <th>Assistir Filmes de Comédia</th>
