--- a/Currículo/curriculo.html
+++ b/Currículo/curriculo.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
     <link rel="stylesheet" href="curriculo.css">
-    <link rel="shortcut icon" type="imagens/png" href="/Currículo/imgs/pvicon.png">
+    <link rel="shortcut icon" type="imagens/png" href="/Currículo/imgs/pp2.jpeg">
     <title>Paula Victória ┃ Developer</title>
 </head>
 
