--- a/Currículo/experiencia.html
+++ b/Currículo/experiencia.html
@@ -1,13 +1,12 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
-<link rel="stylesheet" href="experiencia.css">
 
-
-<h1 class="titleExp">Experiência Profissional</h1>
-<table style="width: 80%;">
+<center>
+    <h1>Experiência Profissional</h1>
+</center>
+<table border="1" cellspadding="5" width: "90%">
     <tr>
-        <th>Período</th>
+        <th width="10%">Período</th>
         <th>Descrição</th>
         <th>Instituição</th>
     </tr>
