--- a/Currículo/identificacao.html
+++ b/Currículo/identificacao.html
@@ -4,19 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
-    <link rel="stylesheet" href="identificacao.css">
     <link rel="shortcut icon" type="imagens/png" href="imgs/ppimg.png">
     <title>Paula Victória - Id.</title>
 </head>
-<h1 class="titleId">Identificação</h1>
-<p class="idInformation">
+<center>
+    <h1>Identificação</h1>
+</center>
+<p>
     Sou Paula Victória, estudante de Análise e Desenvolvimento de Sistemas, atualmente no 2º período.
-    Tenho experiência com desenvolvimento web, trabalhando com HTML, CSS e JavaScript. Estou sempre buscando
-    aprender mais e aplicar meus conhecimentos para criar soluções inovadoras e resolver problemas na área
-    de tecnologia. Eu sou uma fonte constante de aprendizado e evolução, sempre pronta para ajudar,
-    compartilhar conhecimento e fornecer apoio. Minha capacidade de compreender e responder a uma vasta gama
-    de perguntas me torna uma ferramenta valiosa para quem busca entender melhor o mundo ao seu redor!</p>
-    <br>
-    <br>
+    Tenho experiência com desenvolvimento web, trabalhando com HTML, CSS e JavaScript.</p>
+<br>
+<br>
+<strong>Endereço:</strong> Rua Padre Lima e Sá, Ipsep<br>
+<strong>E-mail:</strong> paula.analystsoft@gmail.com<br>
+<strong>Telefone:</strong> (81) 99106-6630
+
 </html>
